# shorturl-rs

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/: 20240209142545_url.sql  20240209150619_url.sql  20240210221957_url.sql
src/: db.rs  http.rs  main.rs
src/http/: handler.rs  model.rs  service.rs
templates/: app.html  base.html  url.html
