[package]
name = "shorturl-rs"
authors = ["Davide Ferrero"]
description = ""
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
rand = "0.8.5"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
url = "2.5.0"
