[package]
name = "shorturl-rs"
authors = ["Davide Ferrero"]
description = "Rust Simple & Lightweight URL Shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
askama = "0.12.1"
axum = "0.7.4"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
rand = "0.8.5"
redis = { version = "0.24.0", features = ["tokio-comp"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
url = "2.5.0"
